--- a/app/views/static/show.erb
+++ b/app/views/static/show.erb
@@ -1,1 +1,3 @@
-<h1><%= @current_url.short_url %></h1>
+<h1 align="center">Header</h1>
+
+<p align="center">Shorty URL: <a href="http://localhost:9393/<%=@url.short_url %>">http:..localhost:9393/<%=@url.short_url%></a></p>
