--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -14,30 +14,42 @@
   <link rel="stylesheet" type="text/css" href="css/application.css">
 </head>
 <body>
-<h1 align="center">Go ahead, shortay</h1>
-<p id="loading"></p>
+  <h1 align="center">Go ahead, shortay</h1>
+  <p id="loading"></p>
+  <div class="banner b01 center">
+    <p id = "p01" align = "center">Enter your URL here to get shortified!</p>
+   
+    <form action="/urls" method="post" style="text-align: center">
+      <input id = "input" type ="text" name="long_url" placeholder="Paste your link here" size="40">
+      <input id = "submitbutton" type ="submit" value="Short it!">
+    </form>
 
-   <div class="banner b01 center">
-     <p id = "p01" align = "center">Enter your URL here to get shortified!</p>
-         
-         <form action="/urls" method="post" style="text-align: center">
-             <input id = "input" type ="text" name="long_url" placeholder="Paste your link here" size="40">
-             <input id = "submitbutton" type ="submit" value="Short it!">
-         </form>
+  </div>
+  <div id="shorturl"></div>
+  <div class="error redfont center">
+    <% if @failed %>
+    Error:
+    Please input a valid URL.
+    <% end %>
+  </div>
 
-   </div>
-<div id="shorturl"></div>
-<div class="error redfont center">
-  <% if @failed %>
-  Error:
-  Please input a valid URL.
-  <% end %>
-</div>
-
-  <tbody>
-  </tbody>
-</table>
-</div>
+  <table>
+    <thead>
+      <th>Id</th>
+      <th>Long url</th>
+      <th>Short url</th>
+    </thead>
+    <tbody>
+      <% @urls.each do |url| %>
+        <tr>
+          <td><%= url.id %></td>
+          <td><%= url.long_url %></td>
+          <td><%= url.short_url %></td>
+          <td><%= url.click_count%></td>
+        </tr>
+      <%end%>
+    </tbody>
+  </table>
 
 </body>
 </html>
